--- a/com.cottsoft.io/pom.xml
+++ b/com.cottsoft.io/pom.xml
@@ -1,12 +1,21 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.cottsoft</groupId>
-    <artifactId>com.cottsoft</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>com.cottsoft.io</groupId>
-  <artifactId>com.cottsoft.io</artifactId>
-  <name>cottsoft io</name>
-  <description>The I/O of cottsoft from cottsoft.com.</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.cottsoft</groupId>
+		<artifactId>com.cottsoft</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>com.cottsoft.io</groupId>
+	<artifactId>com.cottsoft.io</artifactId>
+	<name>cottsoft io</name>
+	<description>The I/O of cottsoft from cottsoft.com.</description>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.9</version>
+		</dependency>
+	</dependencies>
 </project>
