添加日志、通用模块的依赖。

--- a/com.cottsoft.demo.extjs/pom.xml
+++ b/com.cottsoft.demo.extjs/pom.xml
@@ -9,4 +9,14 @@
   <artifactId>com.cottsoft.demo.extjs</artifactId>
   <name>cottsoft extjs</name>
   <description>The Extjs of cottsoft from cottsoft.com.</description>
+  
+  <dependencies>
+		<!-- 内部模块 -->
+		<!-- 公共模块 -->
+		<dependency>
+			<groupId>com.cottsoft.common</groupId>
+			<artifactId>com.cottsoft.common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
 </project>
