--- a/com.cottsoft.common/pom.xml
+++ b/com.cottsoft.common/pom.xml
@@ -10,7 +10,7 @@
 	<artifactId>com.cottsoft.common</artifactId>
 	<name>cottsoft common</name>
 	<description>The commons of cottsoft from cottsoft.com</description>
-	
+
 	<dependencies>
 		<!-- 内部模块 -->
 		<!-- 日志模块 -->
@@ -18,6 +18,13 @@
 			<groupId>com.cottsoft.log</groupId>
 			<artifactId>com.cottsoft.log</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+
+		<!-- 中文转拼音pinyin4j -->
+		<dependency>
+			<groupId>pinyin4j.sourceforge.net</groupId>
+			<artifactId>pinyin4j</artifactId>
+			<version>2.5.0</version>
 		</dependency>
 	</dependencies>
 </project>
